事件循环案例补充&BFC案例补充&手写promise

--- a/JS/08事件循环机制.md
+++ b/JS/08事件循环机制.md
@@ -68,7 +68,7 @@ js事件机制描述的是事件在DOM里面的传递顺序
 <img src="https://user-images.githubusercontent.com/71962217/135372313-d2801504-f765-4857-82aa-dc3676ae5e5e.png" width = "300" height = "400"/>
 
 >宏任务: setTimeout, setInterval, setImmediate, I/O, UI rendering
- 微任务: process.nextTick, Promises, Object.observe(废弃), MutationObserver
+ 微任务: process.nextTick, Promise, Object.observe(废弃), MutationObserver
 
 
 搬运一个博主的整理，觉得写得很详细了    
@@ -117,10 +117,10 @@ setTimeout(function() { //进入宏任务队列
 
 // 1 7 6 8 2 4 3 5 9 11 10 12
 /**
- * 第一轮循环，输出： 1  7  6  8
- * 第二轮循环，输出： 2  4  3  5
- * 第三轮循环，输出： 9  11 10 12
- *     
+ * 同步    1 7
+ * 微任务  6 8
+ * 宏任务  2 4   其中的微任务 3 5 
+ * 下一个宏任务 9 11 其中的微任务 10 12    
  */
 ```
 
@@ -155,14 +155,41 @@ promise.then((val) => console.log(val));
 
 console.log("test end...")
 ```
-案例2分析：    
-调用test()时，首先执行```console.log("test start...");```    
-然后执行``` const v1 = await testSometing(); //关键点1```    
-此时，执行完testSometing()，await会让出线程，因此会转去去执行 关键点2处的代码，也就是```console.log("promise start..");```
-然后执行```console.log("test end...")```    
+> 关于异步函数
+> **1.异步函数的创建是同步的**
+  异步函数的定义和调用是同步执行的。当您声明一个异步函数时，它会立即被创建，但不会立即执行其内部代码。
+> **2.异步函数的执行**
+> 当调用异步函数时，它会同步执行，直到遇到第一个 await 表达式。在此之前，它的行为与普通函数相同。
+> **3.await 的作用**
+当遇到 await 时，函数的执行会暂停，并返回一个隐式的 Promise。这个 Promise 会在 await 后面的表达式完成后被解决。
+> **4.异步任务的处理**
+await 后面的表达式通常是一个异步操作（如 Promise）。这个异步操作会被添加到微任务队列中。
+> **5.控制权的转移**
+在遇到 await 后，异步函数会将控制权交回给调用栈，允许其他代码继续执行。
+> **6.恢复执行**
+当 await 的 Promise 被解决后，异步函数剩余的部分会被作为一个新的微任务添加到队列中，等待执行。
+**总结**：
+异步函数的开始是同步的，但它的整体执行过程是异步的。它允许我们用同步的方式编写异步代码，但底层仍然遵循 JavaScript 的事件循环和任务队列机制。
+因此，异步函数是同步和异步概念的混合体，它的行为取决于函数内部是否使用了 await，以及 await 的位置。  
 
-到此，第一轮循环结束   
-然后，跳到async函数中，继续执行await 后面表达式的返回值```console.log(v1);```    第二轮循环开始，执行到```const v2 = await testAsync();```时，同理。    
+案例2分析：    
+1. 首先，同步执行 test() 函数。
+2. 输出 "test start..."
+3. 遇到 await testSometing()，执行 testSometing() 函数。
+4. 输出 "执行testSometing"
+5. testSometing() 返回结果，但由于 await，后续代码暂停执行，控制权交回主线程。
+6. 执行 new Promise()，输出 "promise start.."
+7. Promise 立即 resolve，.then() 回调被添加到微任务队列。
+8. 输出 "test end..."
+9. 主线程执行完毕，开始执行微任务队列。
+10. 执行 promise.then()，输出 "promise"
+11. 微任务队列清空，回到 test() 函数继续执行。
+12. 输出 "testSometing"（v1 的值）
+13. 执行 await testAsync()
+14. 输出 "执行testAsync"
+15. testAsync() 返回一个 resolved 的 Promise，等待这个 Promise 完成。
+16. Promise 完成后，输出 "hello async"（v2 的值）
+17. 最后输出 "testSometing hello async"（v1 和 v2 的值）   
 
 最终的执行顺序如下：    
 ```
@@ -198,7 +225,6 @@ async function async2() {
         return data;
     });
 }
-// async1()
 async1().then((data) => {
     console.log("6");
     console.log(data);
@@ -210,7 +236,25 @@ new Promise(function(resolve) {
     console.log("8");
 });
 ```
-执行顺序：   
+案例3解析：
+1. setTimeout 是宏任务，放入执行队列
+2. async1().then() 会先执行async1() 在执行then
+3. async1() 执行
+   + 执行  ```console.log("2");```
+   + 调用 async2()
+4. async2() 执行
+   + 执行 ```console.log("4");```, then 被放入微任务队列
+5. await async2() 使 async1 函数暂停执行
+6. 执行 new Promise 的同步代码 ```console.log("7");```, then 被放入微任务队列
+7. 执行微任务队列, ```console.log("5");```
+8. 执行微任务队列, ```console.log("8");```
+9. ```await async2()```执行完,继续执行 async1() 剩余代码 ```console.log("3");```
+10. async1() 执行完毕, 执行 then 回调 , then 被放入 微任务队列
+11. 执行微任务队列, ```console.log("6");```
+12. 执行微任务队列, ```console.log(data);```,输出async2的resolve
+13. 微任务执行完毕,执行宏任务, ```console.log("1");```
+
+最终的打印顺序:
 2  4 7 5 8 3 6 async2的结果 1
 
 
