--- a/JS/06实现深拷贝.md
+++ b/JS/06实现深拷贝.md
@@ -1,20 +1,33 @@
 ### 递归实现
+
+>WeakMap 只接受对象作为键名（null除外），不接受其他类型的值作为键名
+ 键名是弱引用，键值可以是任意的，键名所指向的对象可以被垃圾回收，此时键名是无效的
+ 不能遍历，方法有get、set、has、delete
+
 ```
-function clone(target, map = new WeakMap()) {
-    if (typeof target === 'object') {
-        let cloneTarget = Array.isArray(target) ? [] : {};
-        if (map.get(target)) { //map中已经克隆了该对象---->直接返回
-            return target;
-        }
-        map.set(target, cloneTarget); //map中没有克隆  存入map
-        for (const key in target) {
-            cloneTarget[key] = clone(target[key], map);
-        }
-        return cloneTarget;
-    } else {
-        return target;
+// 使用 WeakMap， 解决循环引用的问题
+function clone (target, map = new WeakMap()) {
+
+  if (target === null || typeof target !== 'object') {
+    return target;
+  }
+
+  let cloneTarget = Array.isArray(target) ? [] : {}
+
+  if (map.has(target)) {
+    // 如果 map 中已经有该对象的克隆，直接返回
+    return map.get(target);
+  }
+  map.set(target, cloneTarget); // 将当前对象作为key，克隆对象作为value进行存储
+
+  for (const key in target) {
+    // 确保只处理自身属性,而不是继承的属性。
+    if (target.hasOwnProperty(key)) { 
+        cloneTarget[key] = clone(target[key], map);
     }
-};
+  }
+  return cloneTarget;
+}
 ```
 关于递归拷贝的实现和性能优化这位大佬已经写得非常清楚   我就直接搬运过来啦
 (https://cloud.tencent.com/developer/article/1497418)   
