--- a/Navigation project/实现一键回到顶部（节流防抖）.md
+++ b/Navigation project/实现一键回到顶部（节流防抖）.md
@@ -62,6 +62,33 @@ backClick() {
       }
     }
    ```
+   支持立即执行
+   ```
+    const debounce = (fn, delay, immediate) => {
+      let timer = null;
+      return function () {
+        let context = this;
+        let args = arguments;
+
+        if (timer) clearTimeout(timer);
+
+        if (immediate) {
+          let callNow = !timer;
+          if (callNow) fn.apply(context, args);
+          timer = setTimeout(() => {
+            timer = null;
+          }, delay);
+          console.log('timer', timer)
+        } else {
+          timer = setTimeout(() => {
+            fn.apply(context, args);
+          }, delay);
+        }
+      };
+    };
+   ```
+
+
    ##### 节流
    规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。<br>
    1. 定时器方式
