图片转网络地址

--- a/vue3/内置组件.md
+++ b/vue3/内置组件.md
@@ -65,7 +65,8 @@ export default {
 </script>
 ```
 Teleport A 和 Teleport B 会被渲染到 outer 中，而不是在 test 中。
-![alt text](image-5.png)
+<!-- ![alt text](image-5.png) -->
+[![pAfEhSf.png](https://s21.ax1x.com/2024/11/22/pAfEhSf.png)](https://imgse.com/i/pAfEhSf)
 
 #### demo2: 以实现模态对话框为例：
 ```
@@ -126,10 +127,12 @@ const open = ref(false)
 </style>
 ```
 模态框被挂载到了父节点上:
-![alt text](image-1.png)
+<!-- ![alt text](image-1.png) -->
+[![pAfE4l8.png](https://s21.ax1x.com/2024/11/22/pAfE4l8.png)](https://imgse.com/i/pAfE4l8)
 存在的问题：
 1. position: fixed 元素会相对于浏览器窗口进行定位，而不是相对于其祖先元素,如果 position: fixed 元素的任何祖先元素设置了 transform、perspective 或 filter 属性，那么 position: fixed 元素将不再相对于浏览器窗口定位，而是相对于最近的未设置这些属性的祖先元素定位。
-   ![alt text](image-2.png)
+   <!-- ![alt text](image-2.png) -->
+   [![pAfEHTs.png](https://s21.ax1x.com/2024/11/22/pAfEHTs.png)](https://imgse.com/i/pAfEHTs)
 2. 这个模态框的 z-index 受限于它的容器元素。如果有其他元素与 ```<div class="outer">``` 重叠并有更高的 z-index，则它会覆盖住我们的模态框。
 
 **使用teleport实现模态框：**
@@ -173,9 +176,11 @@ const open = ref(false)
 </style>
 ```
 挂载到了body上，这样模态框的层级就不受父组件的影响
-![alt text](image.png)
+<!-- ![alt text](image.png) -->
+[![pAfELYq.png](https://s21.ax1x.com/2024/11/22/pAfELYq.png)](https://imgse.com/i/pAfELYq)
 
-![alt text](image-3.png)
+<!-- ![alt text](image-3.png) -->
+[![pAfEOf0.png](https://s21.ax1x.com/2024/11/22/pAfEOf0.png)](https://imgse.com/i/pAfEOf0)
 
 
 #### 注意事项
@@ -279,5 +284,7 @@ export default {
 }
 </script>
 ```
-![alt text](image-7.png)
-![alt text](image-6.png)
+<!-- ![alt text](image-7.png)
+![alt text](image-6.png) -->
+[![pAfEvlT.png](https://s21.ax1x.com/2024/11/22/pAfEvlT.png)](https://imgse.com/i/pAfEvlT)
+[![pAfEjpV.png](https://s21.ax1x.com/2024/11/22/pAfEjpV.png)](https://imgse.com/i/pAfEjpV)
