--- a/work/15.md
+++ b/work/15.md
@@ -21,8 +21,14 @@
 :dash: [参考2](https://blog.csdn.net/qq_37568942/article/details/111193826)
 
 ### Apipost 的基本使用
-<img src="./../pictures/apipost/1.png">
+<!-- <img src="./../pictures/apipost/1.png">
 <img src="./../pictures/apipost/2.png">
 <img src="./../pictures/apipost/3.png">
 <img src="./../pictures/apipost/4.png">
-<img src="./../pictures/apipost/5.png">
+<img src="./../pictures/apipost/5.png"> -->
+
+![1](https://img.picgo.net/2024/11/22/10c6d9905acee2125.png)
+![2](https://img.picgo.net/2024/11/22/22fc6b623bbdb707f.png)
+![3](https://img.picgo.net/2024/11/22/37f65a1963983a30f.png)
+![4](https://img.picgo.net/2024/11/22/439c79799f01fbddf.png)
+![5](https://img.picgo.net/2024/11/22/53302c488ffb05edf.png)
