--- a/work/21.md
+++ b/work/21.md
@@ -1,9 +1,11 @@
 ### 问题
 form表单在125%分辨率下样式错乱，其余分辨率下都正常排列。
 其余分辨率：  
-<img src="../pictures/21-1.png"/>   
+<!-- <img src="../pictures/21-1.png"/>    -->
+![21 1](https://img.picgo.net/2024/11/22/21-11bac0e2aebfb8026.png)
 125%分辨率
-<img src="../pictures/21-2.png"/>
+<!-- <img src="../pictures/21-2.png"/> -->
+![21 2](https://img.picgo.net/2024/11/22/21-227f248ff2b26a793.png)
 
 ### 解决方法
 刚开始看到这个问题的时候，没什么头绪，尝试避免设出现125%分辨率这种情况。 如下：   
@@ -79,11 +81,14 @@ mounted() {
 然后再尝试删掉布局错乱周围的标签后，发现是hSelect这个组件导致的样式错乱！  
 于是将 ``` vertical-align:middle;```修改为``` vertical-align:top;```后， 一切回到了正轨。。。。。。
 
-<img src="../pictures/21-3.png"/>
-<img src="../pictures/21-4.png"/>   
+<!-- <img src="../pictures/21-3.png"/>
+<img src="../pictures/21-4.png"/>    -->
+![21 3](https://img.picgo.net/2024/11/22/21-323f7dcf04d6d56a9.png)
+![21 4](https://img.picgo.net/2024/11/22/21-45937268bd9c21a09.png)
 
 ### 公主请记住
 > 以下来自菜鸟教程
 > vertical-align :设置一个元素的垂直对齐方式。
 > 该属性定义行内元素的基线相对于该元素所在行的基线的垂直对齐。允许指定负长度值和百分比值。这会使元素降低而不是升高。在表单元格中，这个属性会设置单元格框中的单元格内容的对齐方式。  
-<img src="../pictures/21-5.png"/>
+<!-- <img src="../pictures/21-5.png"/> -->
+![21 5](https://img.picgo.net/2024/11/22/21-5296eda1fdf2cb953.png)
