--- a/work/24.md
+++ b/work/24.md
@@ -52,6 +52,7 @@
 
 这里是因为 ```getSimpleSelectData```导致了递归更新
 修改为拿到数据时即处理即可：
-![alt text](image-5.png)
+<!-- ![alt text](image-5.png) -->
+![image 5](https://img.picgo.net/2024/11/22/image-5362a8f881ccc724c.png)
 
 
