--- a/work/25.md
+++ b/work/25.md
@@ -2,7 +2,8 @@
 画布中绘制的流程图 点击和拖拽 触发的位置不对了，点击节点无法触发该节点的相关事件。
 #### 原因分析
 触发的位置不对，说明计算鼠标是否在节点dom内的判断出现了问题，一番排查后发现，在客户框架下缺少了计算画布宽高的class，导致```MutationObserver```监听失效。修改后，在首次进入画布后可以正常点击，但改变侧边菜单伸缩状态后，计算的位置再次出现问题。
-![alt text](image-6.png)
+<!-- ![alt text](image-6.png) -->
+![image 6](https://img.picgo.net/2024/11/22/image-641fdfcec6e416374.png)
 因此排查侧边DOM监听后发现，getBoundingClientRect计算的宽度每次都有误差，导致计算位置出现偏差。  
 **可能造成getBoundingClientRect计算不准确的原因有以下几种**：
 
@@ -18,7 +19,8 @@
 #### 解决方案
 根据以上，定位到客户框架下计算不准确是由于侧边菜单动画未结束就计算了画布的宽高导致的，因此增加定时器，保证在动画效果结束后，再计算。
 
-![alt text](image-7.png)
+<!-- ![alt text](image-7.png) -->
+![image 7](https://img.picgo.net/2024/11/22/image-792e422efdc844de8.png)
 
 兼容不同框架后的正确代码：
 ```
