--- a/work/22.md
+++ b/work/22.md
@@ -1,6 +1,7 @@
 ### 问题描述
 两button之间明明只有8px的margin，但多出了一个间距。
-<img src="../pictures/22.png" />
+<!-- <img src="../pictures/22.png" /> -->
+![22](https://img.picgo.net/2024/11/22/22f71b17521b60b357.png)
 
 ### 原因
 按钮（button）之间的间隔不是由按钮本身的属性决定的，而是由于HTML中的空白字符（如空格、换行或制表符）导致的。浏览器渲染会把这些空白字符作为正常的文本间隔，所以导致两按钮之间会多一块间距。
