--- a/性能优化/性能优化.md
+++ b/性能优化/性能优化.md
@@ -1,3 +1,76 @@
+## 性能优化
+前端性能优化可以从以下几个方面入手：
+
+## 1. **减少HTTP请求**
+   - **合并文件**：将多个CSS或JS文件合并为一个，减少请求次数。
+   - **使用CSS Sprites**：将多个小图标合并为一张大图，通过背景定位显示。
+   - **内联资源**：将小图片或CSS/JS代码直接嵌入HTML中，减少请求。
+
+## 2. **优化资源加载**
+   - **[延迟加载（懒加载）](../性能优化/优化资源加载.md)**：对非关键资源（如图片、JS）使用延迟加载，优先加载核心内容。
+   - **异步加载**：使用`async`或`defer`属性异步加载JS文件，避免阻塞渲染。
+   - **预加载**：通过`<link rel="preload">`提前加载关键资源。
+
+## 3. **压缩资源**
+   - **压缩文件**：使用工具（如Gzip、Brotli）压缩HTML、CSS、JS文件。
+   - **压缩图片**：使用工具（如ImageOptim、TinyPNG）压缩图片，或使用WebP格式。
+   - **精简代码**：移除无用代码、注释和空格，使用工具（如UglifyJS、CSSNano）进行压缩。
+
+## 4. **使用缓存**
+   - **浏览器缓存**：通过设置HTTP头（如`Cache-Control`、`Expires`）缓存静态资源。
+   - **Service Worker**：使用Service Worker实现离线缓存和资源预加载。
+   - **CDN加速**：使用CDN分发静态资源，减少延迟。
+
+## 5. **优化CSS和JS**
+   - **减少重排和重绘**：避免频繁操作DOM，使用`transform`和`opacity`等属性减少重绘。
+   - **使用CSS动画**：优先使用CSS动画而非JS动画，提升性能。
+   - **避免阻塞渲染**：将CSS放在`<head>`中，JS放在`<body>`末尾或使用`defer`/`async`。
+
+## 6. **优化DOM操作**
+   - **减少DOM访问**：缓存DOM查询结果，避免重复查找。
+   - **批量更新DOM**：使用文档片段（`DocumentFragment`）或虚拟DOM批量更新。
+   - **事件委托**：使用事件委托减少事件监听器数量。
+
+## 7. **优化图片和媒体**
+   - **响应式图片**：使用`srcset`和`<picture>`标签根据设备加载合适尺寸的图片。
+   - **懒加载图片**：延迟加载非首屏图片，提升首屏加载速度。
+   - **视频优化**：使用合适的格式（如MP4、WebM），并延迟加载非首屏视频。
+
+## 8. **减少重定向**
+   - **避免不必要的重定向**：减少HTTP重定向次数，降低延迟。
+   - **使用正确的URL**：确保URL正确，避免自动重定向。
+
+## 9. **使用Web Workers**
+   - **后台任务**：将耗时任务（如数据处理）放到Web Workers中执行，避免阻塞主线程。
+## 10. **监控和分析**
+   - **性能监控**：使用工具（如Lighthouse、WebPageTest）分析性能瓶颈。
+   - **持续优化**：定期监控性能，持续优化关键指标（如FCP、TTI）。
+
+## 11. **优化字体**
+   - **字体子集化**：仅加载需要的字符集，减少字体文件大小。
+   - **使用`font-display`**：通过`font-display: swap`避免字体加载时的空白文本。
+
+## 12. **减少第三方脚本**
+   - **按需加载**：仅在需要时加载第三方脚本。
+   - **异步加载**：使用`async`或`defer`加载第三方脚本，避免阻塞。
+
+## 13. **优化首屏加载**
+   - **关键CSS**：将首屏所需CSS内联到HTML中，减少渲染阻塞。
+   - **骨架屏**：使用骨架屏提升用户体验，减少白屏时间。
+
+## 14. **使用HTTP/2**
+   - **多路复用**：利用HTTP/2的多路复用特性，减少请求延迟。
+   - **服务器推送**：通过HTTP/2服务器推送提前发送关键资源。
+
+## 15. **优化Webpack构建**
+   - **代码分割**：使用`SplitChunksPlugin`进行代码分割，按需加载。
+   - **Tree Shaking**：移除未使用的代码，减少打包体积。
+   - **压缩代码**：使用`TerserPlugin`压缩JS，`CssMinimizerPlugin`压缩CSS。
+
+通过这些优化措施，可以显著提升前端性能，改善用户体验。
+
+
+
 ### 打包优化
 
 优化一：打包后的结果，上线时的性能优化。（比如分包处理、减小包体积、CDN服务器等）
