--- a/JS/10内存泄漏.md
+++ b/JS/10内存泄漏.md
@@ -644,16 +644,74 @@ obj = null;
 
 
 
-### 内存泄漏的分析方法
-Chrome DevTools
+### 内存泄漏的分析方法 —— Chrome DevTools
+为了内存泄漏排查时排除其他浏览器插件干扰，建议使用无痕模式，无痕模式默认不加载浏览器插件
 #### 性能 Performance
-![alt text](image.png) 
+在Chrome的开发者工具中，Performance 面板是用来分析网页性能的一个重要工具。它可以帮助开发者理解页面加载过程中的CPU使用情况、渲染时间、网络请求时间以及其他影响性能的因素。
+>排查内存泄漏时，将一开始没有进行操作时的内存使用情况作为基准值，与最后停止操作并进行 GC 后的值进行比较，如果有较明显的差距，则说明产生了内存泄漏。
+
+[![pEP4kXq.png](https://s21.ax1x.com/2025/01/13/pEP4kXq.png)](https://imgse.com/i/pEP4kXq)
+
+[![pEP4mAU.png](https://s21.ax1x.com/2025/01/13/pEP4mAU.png)](https://imgse.com/i/pEP4mAU)
+##### 关于本地指标 (Local metrics)：
+   + 最大内容绘制 (LCP)：显示页面加载时最大的可见内容的绘制时间。在这个例子中，LCP值为1.59秒，表示加载速度良好。
+   + 累积布局偏移 (CLS)：衡量页面内容在加载过程中是否发生了意外的布局变化。在此例中，CLS值为0，表示没有布局偏移，用户体验良好。
+   + 交互到下一个绘制 (INP)：表示用户交互后到下一个绘制的时间。在这个例子中，INP值为16毫秒，显示响应速度快。
+
+  
+
+[![pEP4gUS.png](https://s21.ax1x.com/2025/01/13/pEP4gUS.png)](https://imgse.com/i/pEP4gUS)
+##### 性能指标介绍：
+1. JS Heap（JavaScript堆内存）
+   + 在Performance面板中通常用于观察JavaScript在一段时间内的内存使用情况。在Performance面板的图表中，不同的颜色代表了不同的事件或数据类型，例如红色可能表示高CPU使用率或脚本执行时间，而蓝色线通常与内存相关。上图的js堆栈为847 kB - 118 MB，页面加载了较大的JavaScript文件，可能会影响加载时间和性能。需要检查这些文件的大小和加载方式，考虑是否可以进行代码拆分或延迟加载。
+   + 这条线可能会随着垃圾回收或其他内存操作而发生变化。当这条蓝色线呈现锯齿状时，这通常意味着垃圾回收正在进行，因为垃圾回收会导致内存使用量的快速下降。
+2. Documents（文档）
+   + 页面加载的文档数量，通常是HTML文档
+   + [1-11\]: 表示在特定时间段内，文档对象的状态变化。例如，1-11可能表示在某个时间点，文档对象的数量从1增加到11，或者在某个时间段内有1到11个文档对象被创建或更新。
+3. Nodes（节点）
+   + 页面加载的节点数量，通常是DOM节点
+   + [8-6827\]: 表示在特定时间段内，节点对象的状态变化。例如，8-6827可能表示在某个时间点，节点对象的数量从8增加到6827，或者在某个时间段内有8到6827个节点对象被创建或更新。
+4. Listeners（监听器）
+   + 页面加载的监听器数量，通常是事件监听器
+   + [13-2548\]: 表示在特定时间段内，监听器对象的状态变化。例如，13-2548可能表示在某个时间点，监听器对象的数量从13增加到2548，或者在某个时间段内有13到2548个监听器对象被创建或更新。
+5. GPU Memory（GPU内存）
+   + 指的是在页面渲染过程中使用的图形处理单元（GPU）内存的量。具体来说：
+     - 用途
+       图形渲染: GPU内存用于存储图形数据，如纹理、图形缓冲区和其他与渲染相关的资源。这些数据帮助加速页面的绘制和动画效果。
+     - 监控
+       性能分析: 监控GPU内存的使用情况可以帮助开发者识别性能瓶颈，特别是在处理复杂图形或动画时。如果GPU内存使用过高，可能会导致页面渲染变慢或卡顿。
+     - 优化建议
+       减少图形资源: 优化图像和视频的大小，使用合适的格式和分辨率。
+       使用CSS动画: 尽量使用CSS动画而不是JavaScript动画，以便更好地利用GPU加速。
+       避免过多的图形元素: 减少页面中的图形元素数量，避免不必要的复杂性。
+   通过监控和优化GPU内存的使用，可以提高页面的渲染性能和用户体验。
+
+
+
+##### 性能监视器
+可以通过性能监视器查看页面加载的性能指标，包括CPU使用情况、JS堆大小等。
+如果CPU使用率过高，可能需要优化代码，减少不必要的计算或使用更高效的算法。
+如果JS堆大小持续增加，可能需要检查代码中是否存在内存泄漏。
+![alt text](image-1.png)
+
+
+
 
 #### 内存 Memory
+[![pEP5xJg.png](https://s21.ax1x.com/2025/01/13/pEP5xJg.png)](https://imgse.com/i/pEP5xJg)
+
+1. 堆快照Heap Snapshot
+   内存堆快照中只包含可访问的对象，在开始记录内存堆快照前，Chrome 总是会进行一次 GC 操作。我们可以通过比较前后两次堆快照数据来分析内存泄漏问题。
+   浅层大小：对象本身占用的内存大小
+   保留的大小：保留的大小是指如果该对象被垃圾回收器回收后，可以释放的总内存大小。这包括对象本身的浅层大小以及所有仅通过该对象才能访问的其他对象的内存大小。
+ [![pEPIPLq.png](https://s21.ax1x.com/2025/01/13/pEPIPLq.png)](https://imgse.com/i/pEPIPLq) 
 
 
+2. 时间轴上的分配情况 Allocation on timeline
+   
 
-
+3. 分配采样 Allocation Sampling
+4. 已分离的元素 Detached Elements
 
 
 
@@ -661,4 +719,4 @@ Chrome DevTools
 
 
 参考：
-http://segmentfault.com/a/1190000039132414
+https://www.cnblogs.com/chinasoft/p/18530011
