--- a/something/01.md
+++ b/something/01.md
@@ -8,8 +8,11 @@
   > git log
   不带参数的情况下会列出所有的日志   直到按 q 退出
 - 回退历史版本
-  > git reset
-  在Git中HEAD表示当前版本，HEAD^ 表示上一个版本，HEAD^^ 表示上上版本.....HEAD~100 表示上100个版本
+  > git reset [ --soft | --mixed | --hard ] [< commitid >]
+  > --soft 回退到指定版本，保留工作区的修改（回退位置的修改）,并且为暂存状态
+  > --mixed 回退到指定版本，保留工作区的修改, 但工作目录中的更改会变为未暂存状态
+  > --hard 回退到指定版本，并丢弃工作区和暂存区的修改
+  > 在Git中HEAD表示当前版本，HEAD^ 表示上一个版本，HEAD^^ 表示上上版本.....HEAD~100 表示上100个版本
   > git reset HEAD^  &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   回退到上一版本
 - 查看历史命令
   > git reflog
@@ -21,5 +24,38 @@
 
 - 查看状态
   > git status
+
+
+#### git pull 和 git fetch 的 区别
+> git fetch只会拉取远程的内容分支到本地，但是不会自动合并，是否合并取决于用户的操作。
+> 而git pull会拉取远程对应分支的内容到本地，并且与本地分支进行合并，git pull相当于git fetch + git merge。
+
+#### git rebase和git merge的区别
+`git rebase` 和 `git merge` 都是用于将一个分支的更改合并到另一个分支中，但它们的工作方式和结果有所不同：
+##### git merge
+  + 工作方式: git merge 会将两个分支的历史合并在一起，创建一个新的合并提交（merge commit）。这意味着合并后的分支会保留所有的历史记录，包括分支点和合并点。
+  + 优点: 保留了完整的历史记录，清晰地显示了分支和合并的过程。
+  + 缺点: 可能会导致提交历史变得复杂，尤其是在频繁合并的情况下。
+##### git rebase
+  + 工作方式: git rebase 会将一个分支上的提交“重新应用”到另一个分支的顶部。它会重写提交历史，使得分支看起来像是从目标分支的最新提交开始的。
+  + 优点: 提交历史更加线性和整洁，便于阅读和理解。
+  + 缺点: 由于重写了提交历史，可能会导致问题，特别是在公共分支上使用时。需要小心处理，以避免丢失更改。
+##### 何时使用
+  + 使用 git merge: 当你希望保留完整的历史记录，尤其是在合并公共分支时。
+  + 使用 git rebase: 当你希望保持提交历史的整洁，通常在处理个人分支或在合并到主分支之前。
+  
+##### 示例
+假设有两个分支：main 和 feature。
+```
+ git checkout main
+ git merge feature
+```
+将合并两个分支，并产生一个新的合并提交。
+```
+  git checkout feature
+  git rebase main
+```
+将 feature 分支的 所有提交 重新应用到 main 分支的最新提交之上，产生n个新的提交
+
 
 #### git 的许多命令难以记住，可以使用TortoiseGit来操作git。
