内存泄漏详细步骤补充

--- a/JS/10内存泄漏.md
+++ b/JS/10内存泄漏.md
@@ -645,6 +645,7 @@ obj = null;
 
 
 ### 内存泄漏的分析方法 —— Chrome DevTools
+### [详细步骤在这里](../性能优化/性能分析.md)
 为了内存泄漏排查时排除其他浏览器插件干扰，建议使用无痕模式，无痕模式默认不加载浏览器插件
 #### 性能 Performance
 在Chrome的开发者工具中，Performance 面板是用来分析网页性能的一个重要工具。它可以帮助开发者理解页面加载过程中的CPU使用情况、渲染时间、网络请求时间以及其他影响性能的因素。
@@ -701,22 +702,7 @@ obj = null;
 [![pEP5xJg.png](https://s21.ax1x.com/2025/01/13/pEP5xJg.png)](https://imgse.com/i/pEP5xJg)
 
 1. 堆快照Heap Snapshot
-   内存堆快照中只包含可访问的对象，在开始记录内存堆快照前，Chrome 总是会进行一次 GC 操作。我们可以通过比较前后两次堆快照数据来分析内存泄漏问题。
-   浅层大小：对象本身占用的内存大小
-   保留的大小：保留的大小是指如果该对象被垃圾回收器回收后，可以释放的总内存大小。这包括对象本身的浅层大小以及所有仅通过该对象才能访问的其他对象的内存大小。
- [![pEPIPLq.png](https://s21.ax1x.com/2025/01/13/pEPIPLq.png)](https://imgse.com/i/pEPIPLq) 
-
-
 2. 时间轴上的分配情况 Allocation on timeline
-   
-
 3. 分配采样 Allocation Sampling
 4. 已分离的元素 Detached Elements
 
-
-
-
-
-
-参考：
-https://www.cnblogs.com/chinasoft/p/18530011
