数组去重补充&优化资源加载补充

--- a/JS/05数组去重的几种方法.md
+++ b/JS/05数组去重的几种方法.md
@@ -160,3 +160,25 @@ console.log(arrList);
 ]
  */
 ```
+
+---
+
+```
+Array.prototype.unique = function () {
+  return this.reduce((pre, cur) => {
+    let flag = pre.some((item) => {
+      if (Number.isNaN(item) && Number.isNaN(cur)) {
+        return true
+      } else if (item instanceof Object && cur instanceof Object) {
+        return JSON.stringify(item) === JSON.stringify(cur)
+      } else {
+        return item === cur
+      }
+    })
+    if (!flag) {
+      pre.push(cur)
+    }
+    return pre
+  }, [])
+}
+```
