--- a/性能优化/优化资源加载.md
+++ b/性能优化/优化资源加载.md
@@ -16,6 +16,16 @@
 
 #### 方法 2：使用 Intersection Observer API
 对于不支持 `loading="lazy"` 的浏览器，可以使用 Intersection Observer API 实现延迟加载。
+IntersectionObserver 是 HTML5 新增的API，用于监听元素是否进入视口，当元素进入视口时，触发回调函数。
+> IntersectionObserver(callback, options)：
+> - callback：回调函数，当元素进入视口时，触发回调函数。
+>  回调函数参数callback(entries, observer)：
+>  - entries，一个数组，包含当前进入视口的元素，以及该元素与视口交叉的比例。
+>  - observer，当前 IntersectionObserver 实例。
+> - options：配置对象
+>   - root: 定义交叉检测的根元素，默认是浏览器视口。
+>   - threshold：设置交叉比例的阈值，当元素与视口交叉的比例达到阈值时，触发回调函数。
+>   - rootMargin：一个字符串，设置根元素的 margin，可以为负值。
 ```html
 <img src="placeholder.jpg" data-src="image-to-lazy-load.jpg" alt="Lazy Loaded Image" class="lazy">
 ```
